# subgraph-matching

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bin.rs  cli.rs  enumerate.rs  filter.rs  graph.rs  main.rs  order.rs
subgraph-matching/: Cargo.toml  README.md
subgraph-matching/benches/: benchmark.rs
subgraph-matching/src/: config.rs  enumerate.rs  filter.rs  graph.rs  graph_ops.rs  lib.rs  order.rs
subgraph-matching/src/filter/: gql.rs  ldf.rs  nlf.rs
subgraph-matching/tests/: tests.rs
