[package]
name = "suma"
version = "0.0.3"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
description = "A command line utility for subgraph matching."
keywords = ["graph", "subgraph", "matching", "isomorphism", "cli"]
edition = "2018"
repository = "https://github.com/s1ck/subgraph-matching"
license = "MIT"

[workspace]

[dependencies]
eyre = "0.6.8"
pico-args = "0.5.0"
subgraph-matching = { path = "subgraph-matching" }
