[package]
name = "subgraph-matching"
version = "0.0.3"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
description = "A library for subgraph matching."
keywords = ["graph", "subgraph", "matching", "isomorphism"]
edition = "2018"
repository = "https://github.com/s1ck/subgraph-matching"
license = "MIT"

[dependencies]
atoi = "0.4.0"
cfg-if = "1.0.0"
delegate = "0.6.1"
gdl = "0.2.4"
graph = { path = "../../graph" }
linereader = "0.4.0"
pico-args = "0.4.0"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3"
trim-margin = "0.1.0"

[[bench]]
name = "benchmark"
harness = false
